crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_resource_transition_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedResourceTransitionReceipt;

fn decode(bytes: &[u8]) {
    let _: UnvalidatedResourceTransitionReceipt = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
